// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Matches shallow shapshot 1`] = `
<li
  className="src-shared-components-TopcoderHeader-desktop-SubMenu-Item-___style__item___2Q-ud src-shared-components-TopcoderHeader-desktop-SubMenu-Item-___style__current___38PHh"
  onClick={undefined}
  role="button"
  tabIndex={0}
>
  <Link
    className={null}
    enforceA={false}
    onClick={null}
    onMouseDown={null}
    openNewTab={false}
    replace={false}
    to="menu url"
  >
    icon url
    title
  </Link>
</li>
`;

exports[`Matches shallow shapshot 2`] = `
<li
  className="src-shared-components-TopcoderHeader-desktop-SubMenu-Item-___style__item___2Q-ud"
  onClick={undefined}
  role="button"
  tabIndex={0}
>
  <Link
    className={null}
    enforceA={false}
    onClick={null}
    onMouseDown={null}
    openNewTab={false}
    replace={false}
    to="menu url"
  >
    icon url
    title
  </Link>
</li>
`;
